branch in travis.yml to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-react-calendar",
+  "name": "react-hooks-calendar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
